Add TokkaLabs experience

--- a/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -17,21 +17,39 @@
 		Greek working under \textit{Employment Pass} in \cvaddress
 	\end{center}
 	My experience spans across 10 YoE designing and building heavily transactional, distributed,
-	relational database backed systems. The last 2 years I have made a shift on the SRE problem domain.
+	relational database backed systems. The last 3 years I have made a shift on the SRE problem domain.
 
 	\section{Work experience}
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
+
+		\item[] \cvExperience
+			{Site Reliabily Engineer (SRE) / Platform Engineer}
+			{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs}}
+			{Singapore}
+			{Nov 2022 - Present}
+			{
+				\\ Joined as the first dedicated SRE/Platform engineer
+				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+					\item[\textasteriskcentered] Designed and implemented a cloud architecture reducing
+						latency from ~1s to below 500ms.
+					\item[\textasteriskcentered] Managed 9 K8s clusters across 3 regions provisioning a region in less than 2 days.
+					\item[\textasteriskcentered] Created template integrations for instrumenting nodejs and python services
+						against Prometheus, Grafana and Jaeger allowing engineers to investigate issues in a matter of minutes.
+					\item[\textasteriskcentered] Refactored helm templates and value files easing maintenance and empowering
+						engineers to introduce new services from a couple of days to a few minutes.
+				\end{enumerate}
+			}
+
 		\item[] \cvExperience
 			{Site Reliabily Engineer (SRE)}
 			{\href{https://www.bytedance.com/en}{Bytedance}}
 			{Singapore}
-			{Sept 2021 - Oct 2022}
+			{Sept 2021 - Oct 2022 (1yr 1mo)}
 			{
 				\\ Joined the newly formed SRE team supported the Global E-commerce function of TikTok
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Implemented a Kubernetes sidecar measuring the availability SLI of more than 200 HTTP services
-					\item[\textasteriskcentered] Analysed SLI based alerts and pushed for adoption of error budget burn rate approach
-					\item[\textasteriskcentered] Designed and implemented the MVP version of an incident record tool aiming to reduce the manual bookkeeping activities during oncall cases and build a knowledge base based on them
+					\item[\textasteriskcentered] Implemented a Kubernetes sidecar measuring the availability SLI of more than 200 HTTP services.
+					\item[\textasteriskcentered] Designed and implemented the MVP version of an incident record tool aiming to reduce the manual bookkeeping activities during oncall cases and build a knowledge base based on them.
 				\end{enumerate}
 			}
 
@@ -41,8 +59,8 @@
 			{Singapore}
 			{Aug 2020 - Sept 2021 (1yr 1mo)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Defined the initial process for an SRE rota across two teams located in multiple locations
-					\item[\textasteriskcentered] Configured prometheus and grafana infrastructure reducing the manual daily SRE monitoring activities
+					\item[\textasteriskcentered] Defined the initial process for an SRE rota across two teams located in multiple locations.
+					\item[\textasteriskcentered] Configured prometheus and grafana infrastructure reducing the manual daily SRE monitoring activities.
 				\end{enumerate}
 			}
 
@@ -52,15 +70,11 @@
 			{Singapore}
 			{Sep 2018 - Jul 2020 (1yr 11mos)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Led a team of 3 engineers with the goal to harden the
-						funding flow ensuring eWallet integrity resulting in a drop of 1 incident per week
-						to 1 per year
+					\item[\textasteriskcentered] Led a team of 3 engineers hardening the
+						funding flow droping incindents from 1 per week to 1 per year.
 					\item[\textasteriskcentered] Enhanced the performance of slow database queries reducing
-						the number of production incidents due to human design error to zero (0)
-					\item[\textasteriskcentered] Investigated more than 20 high profile incidents and
-						presented 4 of them to C level stakeholders
-					\item[\textasteriskcentered] Migrated 80 million lottery bets to renewed,
-						more robust data model
+						the number of production incidents due to human design error to zero (0).
+					\item[\textasteriskcentered] Migrated 80 million lottery bets to a more robust data model.
 				\end{enumerate}
 			}
 
@@ -72,13 +86,11 @@
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Owned the data migration of 100 million rows of
-						transaction history completed in under 3 hours
-					\item[\textasteriskcentered] Designed distributed reportingqueries for Informix
-						database for the Finance and Trading departments
+						transaction history completed in under 3 hours.
 					\item[\textasteriskcentered] Influenced the release process from code to
-						production increasing the delivery capacity of the team
+						production increasing the delivery capacity of the team.
 					\item[\textasteriskcentered] Refactored the Ansible deployment scripts
-						reducing to zero the release introduced incidents
+						reducing to zero the release related incidents.
 				\end{enumerate}
 			}
 
@@ -89,9 +101,9 @@
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Wrote and executed the extraction of
-						one billion rows during uptime with no impact to operations
+						one billion rows during uptime with no impact to operations.
 					\item[\textasteriskcentered] Removed the need for PCI compliance by
-						integrating with tokenized credit card providers
+						integrating with tokenized credit card providers.
 				\end{enumerate}
 			}
 	\end{enumerate}
