Repo directory structure

--- a/src/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -24,7 +24,7 @@
 
 		\item[] \cvExperience
 			{Site Reliabily Engineer (SRE) / Platform Engineer}
-			{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs}}
+			{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs} / \href{https://native.org/}{Native} / \href{https://www.rangeprotocol.com/}{RangeProtocol}}
 			{Singapore}
 			{Nov 2022 - Present}
 			{
