--- a/src/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -118,7 +118,7 @@
 				(item 4)
 				{\cvExperience
 					{SRE / Platform Engineer}
-					{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs}}
+					{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs} / \href{https://native.org/}{Native} / \href{https://www.rangeprotocol.com/}{RangeProtocol}}
 					{Singapore}
 					{Nov 2022 - Present}
 					{
