Add more one item in Vega Solutions entry

--- a/src/DimitrisKafetzis-cv-en-colorsAndIcons.tex
+++ b/src/DimitrisKafetzis-cv-en-colorsAndIcons.tex
@@ -104,7 +104,7 @@
 		\switchcolumn
 
 		\section{{\small \faBriefcase} Work experience}
-		\begin{tikzpicture}][every node/.style={inner sep=0pt, outer sep=0pt}]
+		\begin{tikzpicture}[every node/.style={inner sep=0pt, outer sep=0pt}]
 
 			% item 5
 			\node[
@@ -268,7 +268,7 @@
 			\draw [eventGroupedLine] (endInner) -- (startInner) node [eventGroupedSideText]{Same department, same product, multiple acquisitions.};
 
 			% Use `shorten <=-10mm` to adjust the position of the arrow.
-			\draw[very thick, {Triangle[length = 7pt)]}-{}, shorten <=-2mm] (start.north) to (end.south);
+			\draw[very thick, {Triangle[length = 7pt]}-{}, shorten <=-2mm] (start.north) to (end.south);
 		\end{tikzpicture}
 
 		\section{{\small \faWrench} Technology stack}
