--- a/src/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -16,7 +16,7 @@
 		\href{mailto:\cvmail}{\cvmail} \space \textbar \space \cvlinkedin \space \textbar \space \cvgithub \\
 		Greek working under \textit{Employment Pass} in \cvaddress
 	\end{center}
-	My experience spans across 10 YoE designing and building heavily transactional, distributed,
+	My experience spans across 11 YoE designing and building heavily transactional, distributed,
 	relational database backed systems. The last 3 years I have made a shift on the SRE problem domain.
 
 	\section{Work experience}
@@ -31,22 +31,24 @@
 				\\ Joined as the first dedicated SRE/Platform engineer
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Designed and implemented a cloud architecture reducing
-						latency from ~1s to below 500ms.
-					\item[\textasteriskcentered] Managed 9 K8s clusters across 3 regions provisioning a region in less than 2 days.
+						latency from +1s to below 500ms.
+					\item[\textasteriskcentered] Managed 9 K8s clusters across 3 regions provisioning a new full region in less than 2 days.
 					\item[\textasteriskcentered] Created template integrations for instrumenting nodejs and python services
 						against Prometheus, Grafana and Jaeger allowing engineers to investigate issues in a matter of minutes.
 					\item[\textasteriskcentered] Refactored helm templates and value files easing maintenance and empowering
 						engineers to introduce new services from a couple of days to a few minutes.
+						\item[\textasteriskcentered] Pushed for a cloud native architecture by provisioning databases inside k8s
+						and advocating for k8s only deployments. Succeeded in deploying small mysql, postgres/timescale and redis
+						clusters in k8s.
 				\end{enumerate}
 			}
 
 		\item[] \cvExperience
 			{Site Reliabily Engineer (SRE)}
-			{\href{https://www.bytedance.com/en}{Bytedance}}
+			{\href{https://www.bytedance.com/en}{Bytedance} - Global E-commerce TikTok}
 			{Singapore}
 			{Sept 2021 - Oct 2022 (1yr 1mo)}
 			{
-				\\ Joined the newly formed SRE team supported the Global E-commerce function of TikTok
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Implemented a Kubernetes sidecar measuring the availability SLI of more than 200 HTTP services.
 					\item[\textasteriskcentered] Designed and implemented the MVP version of an incident record tool aiming to reduce the manual bookkeeping activities during oncall cases and build a knowledge base based on them.
@@ -79,10 +81,10 @@
 			}
 
 		\item[] \cvExperience
-			{Senior Software Engineer}
+			{Software Engineer, \scriptsize{Junior to Senior}}
 			{\href{https://www.openbet.com/}{OpenBet}}
-			{Singapore}
-			{Oct 2015 - Aug 2018 (2yrs 11mos)}
+			{Athens, Greece / Singapore}
+			{Nov 2012 - Aug 2018 (5yrs 10mos)}
 			{
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Owned the data migration of 100 million rows of
@@ -91,15 +93,6 @@
 						production increasing the delivery capacity of the team.
 					\item[\textasteriskcentered] Refactored the Ansible deployment scripts
 						reducing to zero the release related incidents.
-				\end{enumerate}
-			}
-
-		\item[]  \cvExperience{Software Engineer}
-			{\href{https://www.openbet.com/}{OpenBet}}
-			{Athens, Greece}
-			{Nov 2012 - Sep 2015 (2 yrs 11mos)}
-			{
-				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Wrote and executed the extraction of
 						one billion rows during uptime with no impact to operations.
 					\item[\textasteriskcentered] Removed the need for PCI compliance by
