kafetzis.dimitris.andreas@gmail.com --> dimitris@kafetzis.dev

--- a/LatexTemplateCVs/Europecv2013/MntsosCV-gr.tex
+++ b/LatexTemplateCVs/Europecv2013/MntsosCV-gr.tex
@@ -13,7 +13,7 @@
 \ecvfootername{Δημήτριος Ανδρέας Καφετζής}
 \ecvaddress{\foreignlanguage{english}{xxxx}}
 \ecvtelephone[xxxx]{xxxx}
-\ecvemail{\href{mailto:kafetzis.dimitris.andreas@gmail.com}{\foreignlanguage{english}{kafetzis.dimitris.andreas@gmail.com}}}
+\ecvemail{\href{mailto:dimitris@kafetzis.dev}{\foreignlanguage{english}{dimitris@kafetzis.dev}}}
 \ecvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{\foreignlanguage{english}{kafetzisd}}}
 \ecvgithub{\href{https://github.com/amolofos}{\foreignlanguage{english}{amolofos}}}
 \ecvnationality{Ελληνική}
