--- a/src/DimitrisKafetzis-cv-en-colorsAndIcons.tex
+++ b/src/DimitrisKafetzis-cv-en-colorsAndIcons.tex
@@ -15,7 +15,7 @@
 \cvsite{}
 \cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{in/kafetzisd}}
 \cvgithub{\href{https://github.com/amolofos}{github.com/amolofos}}
-\cvmail{kafetzis.dimitris.andreas@gmail.com}
+\cvmail{dimitris@kafetzis.dev}
 
 \begin{document}
 
