--- a/src/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -7,7 +7,7 @@
 \cvaddress{Singapore}
 \cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{linkedin.com/in/kafetzisd}}
 \cvgithub{\href{https://github.com/amolofos}{github.com/amolofos}}
-\cvmail{kafetzis.dimitris.andreas@gmail.com}
+\cvmail{dimitris@kafetzis.dev}
 
 \begin{document}
 
