--- a/src/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -22,7 +22,7 @@
 \cvsite{}
 \cvlinkedin{\href{https://www.linkedin.com/in/kafetzisd}{kafetzisd}}
 \cvgithub{\href{https://github.com/amolofos}{amolofos}}
-\cvmail{kafetzis.dimitris.andreas@gmail.com}
+\cvmail{dimitris@kafetzis.dev}
 
 \begin{document}
 
