--- a/src/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -23,7 +23,7 @@
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 
 		\item[] \cvExperience
-			{Site Reliabily Engineer (SRE) / Platform Engineer}
+			{Site Reliability Engineer (SRE) / Platform Engineer}
 			{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs} / \href{https://native.org/}{Native} / \href{https://www.rangeprotocol.com/}{RangeProtocol}}
 			{Singapore}
 			{Nov 2022 - Present}
@@ -44,7 +44,7 @@
 			}
 
 		\item[] \cvExperience
-			{Site Reliabily Engineer (SRE)}
+			{Site Reliability Engineer (SRE)}
 			{\href{https://www.bytedance.com/en}{Bytedance} - Global E-commerce TikTok}
 			{Singapore}
 			{Sept 2021 - Oct 2022 (1yr 1mo)}
