--- a/src/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -154,7 +154,7 @@
 				eventDotText]
 				(item 3)
 				{\cvExperience
-					{Site Reliabily Engineer (SRE)}
+					{Site Reliability Engineer (SRE)}
 					{\href{https://www.bytedance.com/en}{Bytedance} - Global E-commerce TikTok}
 					{Singapore}
 					{Sept 2021 - Oct 2022 (1yr 1mo)}
