--- a/src/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -23,12 +23,12 @@
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 
 		\item[] \cvExperience
-			{Site Reliability Engineer (SRE) / Platform Engineer}
+			{Site Reliability Engineer (SRE) \textbar\space Platform Engineer}
 			{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs} / \href{https://native.org/}{Native} / \href{https://www.rangeprotocol.com/}{RangeProtocol}}
 			{Singapore}
 			{Nov 2022 - Present}
 			{
-				\\ Joined as the first dedicated SRE/Platform engineer
+				\\ Joined as the first dedicated SRE and Platform engineer
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Designed and implemented a cloud architecture reducing
 						latency from +1s to below 500ms.
@@ -45,7 +45,7 @@
 
 		\item[] \cvExperience
 			{Site Reliability Engineer (SRE)}
-			{\href{https://www.bytedance.com/en}{Bytedance} - Global E-commerce TikTok}
+			{\href{https://www.bytedance.com/en}{Bytedance}, Global E-commerce TikTok}
 			{Singapore}
 			{Sept 2021 - Oct 2022 (1yr 1mo)}
 			{
@@ -56,7 +56,7 @@
 			}
 
 		\item[] \cvExperience
-			{Principal Integration Engineer \textbar SRE}
+			{Principal Integration Engineer \textbar\space SRE}
 			{\href{https://www.openbet.com/}{OpenBet}}
 			{Singapore}
 			{Aug 2020 - Sept 2021 (1yr 1mo)}
