--- a/src/DimitrisKafetzis-cv-en-twoColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-twoColumn.tex
@@ -117,12 +117,12 @@
 				eventDotText]
 				(item 4)
 				{\cvExperience
-					{SRE / Platform Engineer}
+					{SRE \textbar\space Platform Engineer}
 					{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs} / \href{https://native.org/}{Native} / \href{https://www.rangeprotocol.com/}{RangeProtocol}}
 					{Singapore}
 					{Nov 2022 - Present}
 					{
-						\\ Joined as the first dedicated SRE/Platform engineer
+						\\ Joined as the first dedicated SRE and Platform engineer
 						\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 							\item[\textasteriskcentered] Designed and implemented a new cloud architecture (AWS to AWS) reducing
 								latency from +1s to below 500ms while supporting multiple regions (provisioning a new full-service region
@@ -155,7 +155,7 @@
 				(item 3)
 				{\cvExperience
 					{Site Reliability Engineer (SRE)}
-					{\href{https://www.bytedance.com/en}{Bytedance} - Global E-commerce TikTok}
+					{\href{https://www.bytedance.com/en}{Bytedance}, Global E-commerce TikTok}
 					{Singapore}
 					{Sept 2021 - Oct 2022 (1yr 1mo)}
 					{
@@ -182,7 +182,7 @@
 				eventDotText]
 				(item 2)
 				{\cvExperience
-					{Principal Integration Engineer \textbar SRE}
+					{Principal Integration Engineer \textbar\space SRE}
 					{\href{https://www.openbet.com/}{OpenBet}}
 					{Singapore}
 					{Aug 2020 - Sep 2021 (1yr 1mo)}
