--- a/src/DimitrisKafetzis-cv-en-oneColumn.tex
+++ b/src/DimitrisKafetzis-cv-en-oneColumn.tex
@@ -16,19 +16,31 @@
 		\href{mailto:\cvmail}{\cvmail} \space \textbar \space \cvlinkedin \space \textbar \space \cvgithub \\
 		Greek working under \textit{Employment Pass} in \cvaddress
 	\end{center}
-	My experience spans across 11 YoE designing and building heavily transactional, distributed,
-	relational database backed systems. The last 3 years I have made a shift on the SRE problem domain.
+	My experience spans across 12 YoE designing and building heavily transactional, distributed,
+	relational database backed systems. The last 4 years I have made a shift on the SRE problem domain.
 
 	\section{Work experience}
 	\begin{enumerate}[labelwidth=!, labelindent=0pt, leftmargin=*, rightmargin=15pt]
 
 		\item[] \cvExperience
+			{Senior Site Reliability Engineer (SRE) \textbar\space Platform Reliability Engineer}
+			{\href{https://adyen.com}{Adyen}}
+			{Singapore}
+			{Sept 2024 - Present}
+			{
+				\\ Joined as a member of the global SRE team.
+				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
+					\item[\textasteriskcentered] Eased the onboarding by structuring and writing an intro-to-platform course.
+				\end{enumerate}
+			}
+
+		\item[] \cvExperience
 			{Site Reliability Engineer (SRE) \textbar\space Platform Engineer}
 			{\href{https://vegasolutions.co}{VegaSolutions} / \href{https://tokkalabs.com}{TokkaLabs} / \href{https://native.org/}{Native} / \href{https://www.rangeprotocol.com/}{RangeProtocol}}
 			{Singapore}
-			{Nov 2022 - Present}
+			{Nov 2022 - Aug 2024}
 			{
-				\\ Joined as the first dedicated SRE and Platform engineer
+				\\ Joined as the first dedicated SRE and Platform engineer.
 				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
 					\item[\textasteriskcentered] Designed and implemented a cloud architecture reducing
 						latency from +1s to below 500ms.
@@ -69,34 +81,20 @@
 		\item[] \cvExperience
 			{Principal Software Engineer}
 			{\href{https://www.openbet.com/}{OpenBet}}
-			{Singapore}
-			{Sep 2018 - Jul 2020 (1yr 11mos)}
+			{Athens, Greece / Singapore}
+			{Nov 2012 - Jul 2020 (7yrs 9mos)}
 			{\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Led a team of 3 engineers hardening the
-						funding flow droping incindents from 1 per week to 1 per year.
+					\item[\textasteriskcentered] Refactored the Ansible deployment scripts
+					reducing to zero the release related incidents.
+					\item[\textasteriskcentered] Influenced the release process from code to
+					production increasing the delivery capacity of the team.
 					\item[\textasteriskcentered] Enhanced the performance of slow database queries reducing
 						the number of production incidents due to human design error to zero (0).
-					\item[\textasteriskcentered] Migrated 80 million lottery bets to a more robust data model.
-				\end{enumerate}
-			}
-
-		\item[] \cvExperience
-			{Software Engineer, \scriptsize{Junior to Senior}}
-			{\href{https://www.openbet.com/}{OpenBet}}
-			{Athens, Greece / Singapore}
-			{Nov 2012 - Aug 2018 (5yrs 10mos)}
-			{
-				\begin{enumerate}[labelwidth=!, labelindent=0pt, nosep, leftmargin=*]
-					\item[\textasteriskcentered] Owned the data migration of 100 million rows of
+						\item[\textasteriskcentered] Owned the data migration of 100 million rows of
 						transaction history completed in under 3 hours.
-					\item[\textasteriskcentered] Influenced the release process from code to
-						production increasing the delivery capacity of the team.
-					\item[\textasteriskcentered] Refactored the Ansible deployment scripts
-						reducing to zero the release related incidents.
-					\item[\textasteriskcentered] Wrote and executed the extraction of
-						one billion rows during uptime with no impact to operations.
-					\item[\textasteriskcentered] Removed the need for PCI compliance by
-						integrating with tokenized credit card providers.
+					\item[\textasteriskcentered] Migrated 80 million lottery bets to a more robust data model.
+					\item[\textasteriskcentered] Led a team of 3 engineers hardening the
+						funding flow droping incindents from 1 per week to 1 per year.
 				\end{enumerate}
 			}
 	\end{enumerate}
